--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
