--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "nodemon --watch . js index.js"
   },
-  "author": "Bertha Aurora Rodriguez Ramirez <bero_22@alu.uabcs.mx>",
+  "author": "Serigio Barraza Arredondo <sbarraza_22@alu.uabcs.mx>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mysql": "^2.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
